--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,3 @@
-<?php
-//placeholder, just to recognize as php
-?>
 <html>
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -39,7 +36,7 @@
     <body>
         <H1 align="center"> Select your quiz type</H1>
         <div class="btn_con">
-            <form method="Post" action="./quiz.php">
+            <form method="Post" action="/quiz">
                 <button style="padding: 10px 64px 10px 64px;margin: 0px 0px 20px 0px" class="btn" name="qtype" value="easy">Easy</button><br />
                 <button style="padding: 10px 29px 10px 29px;margin: 0px 0px 20px 0px" class="btn" name="qtype" value="medium">Medium</button><br />
                 <button style="padding: 10px 63px 10px 63px" class="btn" name="qtype" value="hard">Hard</button>
