--- a/views/result.ejs
+++ b/views/result.ejs
@@ -1,40 +1,47 @@
-<?php
-if(empty($_POST)) {
-    echo "You are coming directly.. not allowed";
-    die();
+<%
+//takes data as json object
+//and generate Q/A list
+function gen_qa_list(data) {
+    var r=1;
+    data.forEach( function (row) {
+        var ques_s = "Q-"+r+": "+row.ques+"<br>"
+        var ans_s = "Ans: "+row['op_'+row.ans]
+%>
+<%-
+        "<div class=\"qa_cont\">"
+        +ques_s+
+        ans_s+
+        "</div>"
+%>
+<%
+        r++;
+    })
 }
+%>
 
-$quiz = $_POST['qtype'];
-require('./database.php'); 
-
-//matches two options
-//returns true if they are equal
-function isAnsRight($ans, $rans){
-    if($_POST[$ans] == $rans) {
-        return true;
-    }
-    return false;
-}
-$perf = array('Poor', 'Poor', 'Bad', 'Good', 'Strong', 'Strong');
-
-// calculate the user's score
-function calcScore($ans_l, $q_c) {
-    $sc = 0;
-    for($i = 0; $i < $q_c; $i++) {
-        $kk = "q".($i+1);
-        if(isAnsRight($kk, $ans_l[$i])) {
-            $sc++;
+<%
+//takes userdata and ans_key
+// calculate user's score and returns it
+function calc_sc(data, u_data) {
+    var r = 1
+    var sc = 0
+    while (r <= data.length) {
+        c_val = data[r-1]['ans']
+        u_val = u_data['q'+r]
+        if( (u_val != undefined) && (u_val == c_val)) {
+            sc++
         }
+        r++;
     }
-    return $sc;
+    return sc
 }
 
-//fetch answer key and store in any array
-$data = fetch_ans($conn, $_POST['qtype']."_q_ans");
+var perf = ["Poor", "Poor", "Bad", "Good", "Strong", "Strong"]
 
-$tot = count($data);
-$score = calcScore($data, $tot);
-?>
+var sc = calc_sc(data, user_data)
+var tot = data.length
+%>
+
 <html>
     <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -69,22 +76,22 @@ $score = calcScore($data, $tot);
             </tr>
             <tr>
                 <td style="color: green">Right Answers:
-                <td><?php echo $score ; ?><br>
+                <td><%= sc %><br>
             </tr>
                 <td style="color: red">Wrong Answers:
-                <td><?php echo ($tot - $score); ?><br>
+                <td><%= tot - sc %><br>
             </tr>
             <tr>
                 <td>Performance:
-                <td><?php echo $perf[$score]; ?><br>
+                <td><%= perf[sc]  %><br>
             </tr>
             <tr>
                 <td>Difficulty:
-                <td><?php echo ucwords($quiz); ?>
+                <td><%=qtype%><br>
             </tr>
         </table>
          <H2>Correct Answers:</H2>
-         <?php gen_q_ans($conn, $quiz."_q_ans"); ?>
+         <% gen_qa_list(data) %>
          <div style="margin: 5px 0px 0px 0px;text-align: center;font-size: 25px">
              <a href="/">Home</a>
          </div>
