--- a/views/quiz.ejs
+++ b/views/quiz.ejs
@@ -3,7 +3,7 @@
 // and generate quiz content to render
 function gen_quiz(data) {
     var r = 1
-    data.forEach(function (row) {
+    data.forEach((row) => {
         var ques_s = "Q-"+r+": "+row.ques+"<br>"
 %>
 <%-
